--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AlgoMentor Java DSA Tutor App</title>
-    <meta property="og:image" content="https://bolt.new/static/og_default.png" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png" />
-  </head>
+    
+    <title>AlgoMentor | Java & DSA Tutor</title>
+    <meta name="description" content="Your personal AI learning companion for mastering Java and Data Structures & Algorithms." />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="AlgoMentor | Java & DSA Tutor" />
+    <meta property="og:description" content="Level up your Java and DSA skills with an intelligent AI mentor." />
+    </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
