feat: add custom social media preview logo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="AlgoMentor | Java & DSA Tutor" />
     <meta property="og:description" content="Level up your Java and DSA skills with an intelligent AI mentor." />
+    <meta property="og:image" content="https://project-phi-khaki.vercel.app/og-image.png" />
     </head>
   <body>
     <div id="root"></div>
